--- a/photo.html
+++ b/photo.html
@@ -6,39 +6,40 @@
     <title>HTML Academy: Пинк</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+    </script>
+    <script src="js/picturefill.js" async></script>
   </head>
   <body class="body">
     <header class="main-header">
-      <div class="main-header__short-menu-wrapper">
-        <div class="main-header__short-menu">
-          <div class="logo">
-            <a href="index.html">
-              <picture>
-                <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
-                <source media="(min-width: 700px)" srcset="img/logo-pink-white-tablet.svg">
-                <img src="img/logo-pink-white-mobile.svg">
-              </picture>
-            </a>
-          </div>
-          <a class="main-header__toggle  main-header__toggle--closed" href="#">Меню</a>
-        </div>
-      </div>
-      <nav class="main-nav main-nav--nojs">
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list">
-            <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
-            <li class="main-nav__item"><a class="main-nav__link  main-nav__link--active">Фотографии</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="form.html">Конкурс</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="#">Html Academy</a></li>
-          </ul>
-        </div>
+      <nav class="main-nav">
+        <ul class="main-nav__list">
+          <li class="main-nav__item  main-nav__item-menu">
+            <div class="logo">
+              <a href="index.html">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
+                  <source media="(min-width: 700px)" srcset="img/logo-pink-white-tablet.svg">
+                  <img src="img/logo-pink-white-mobile.svg">
+                </picture>
+              </a>
+            </div>
+            <a class="main-nav__toggle  main-nav__toggle--closed" href="#">Меню</a>
+          </li>
+          <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
+          <li class="main-nav__item"><a class="main-nav__link  main-nav__link--active" >Фотографии</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="form.html">Конкурс</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="#">HTML&nbsp;Academy</a></li>
+        </ul>
       </nav>
     </header>
     <div class="page-title">
       <h2 class="page-title__text">Фотографии пользователей</h2>
     </div>
     <div class="page-descr">
-      <p class="page-descr__text">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
+      <p class="page-descr__text">Взгляните на фотографии, которые выкладывают пользователи! <br> Видите, как не хватает ваших?</p>
     </div>
     <div class="panorama">
       <div class="panorama__img">
@@ -53,11 +54,13 @@
                srcset="img/panorama-mobile@2x.jpg 2x"
                alt="panorama">
         </picture>
+        <div class="panorama__day">Панорама дня</div>
       </div>
       <div class="panorama__comment">
         <b class="panorama__name">Анна</b>
         <span class="panorama__time">(5 минут назад)</span>
-        <p class="panorama__message">Прыгать или нет? Напишите в комментарии свой ответ и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+        <p class="panorama__message">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+        <div class="panorama__like-img"></div>
         <span class="panorama__like">Нравится: 215</span>
       </div>
     </div>
@@ -80,6 +83,7 @@
           <b class="photo-block__name">Левон</b>
           <span class="photo-block__time">(5 часов назад)</span>
           <p class="photo-block__message">Вчера он на луну летал, сегодня в руки к нам попал</p>
+          <div class="photo-block__like-img"></div>
           <span class="photo-block__like">Нравится: 356</span>
         </div>
       </div>
@@ -101,6 +105,7 @@
           <b class="photo-block__name">Антон</b>
           <span class="photo-block__time">(12 часов назад)</span>
           <p class="photo-block__message">Соседи будут рады!</p>
+          <div class="photo-block__like-img"></div>
           <span class="photo-block__like">Нравится: 666</span>
         </div>
       </div>
@@ -122,6 +127,7 @@
           <b class="photo-block__name">Борис</b>
           <span class="photo-block__time">(20 часов назад)</span>
           <p class="photo-block__message">Здесь могла быть ваша цитата о высоком и вечном</p>
+          <div class="photo-block__like-img"></div>
           <span class="photo-block__like">Нравится: 215</span>
         </div>
       </div>
@@ -143,6 +149,7 @@
           <b class="photo-block__name">Сергей</b>
           <span class="photo-block__time">(25 часов назад)</span>
           <p class="photo-block__message">Самая кубанская в мире!</p>
+          <div class="photo-block__like-img"></div>
           <span class="photo-block__like">Нравится: 4</span>
         </div>
       </div>
@@ -164,6 +171,7 @@
           <b class="photo-block__name">Максим</b>
           <span class="photo-block__time">(40 часов назад)</span>
           <p class="photo-block__message">Где снег-то?</p>
+          <div class="photo-block__like-img"></div>
           <span class="photo-block__like">Нравится: 150</span>
         </div>
       </div>
@@ -185,6 +193,7 @@
           <b class="photo-block__name">Надежда</b>
           <span class="photo-block__time">(45 часов назад)</span>
           <p class="photo-block__message">Всем GM и взаимные лайки!</p>
+          <div class="photo-block__like-img"></div>
           <span class="photo-block__like">Нравится: 2560</span>
         </div>
       </div>
@@ -207,27 +216,24 @@
         </div>
         <div class="photo-edit__controls-wrapper">
           <div class="photo-edit__tools">
-            <div class="photo-edit__tools-wrapper">
-              <div class="photo-edit__crop"></div>
-              <div class="photo-edit__control">
-                <div class="photo-edit__scale"></div>
-                <div class="photo-edit__toggle"></div>
-              </div>
+            <div class="photo-edit__crop"></div>
+            <div class="photo-edit__control">
+              <div class="photo-edit__scale"></div>
+              <div class="photo-edit__toggle"></div>
             </div>
-            <div class="photo-edit__tools-wrapper">
-              <div class="photo-edit__fill"></div>
-              <div class="photo-edit__control  photo-edit__control--hidden">
-                <div class="photo-edit__scale"></div>
-                <div class="photo-edit__toggle"></div>
-              </div>
+            <div class="photo-edit__line"></div>
+            <div class="photo-edit__fill"></div>
+            <div class="photo-edit__control  photo-edit__control--hidden">
+              <div class="photo-edit__scale"></div>
+              <div class="photo-edit__toggle"></div>
             </div>
-            <div class="photo-edit__tools-wrapper">
-              <div class="photo-edit__contrast"></div>
-              <div class="photo-edit__control  photo-edit__control--hidden">
-                <div class="photo-edit__scale"></div>
-                <div class="photo-edit__toggle"></div>
-              </div>
+            <div class="photo-edit__line"></div>
+            <div class="photo-edit__contrast"></div>
+            <div class="photo-edit__control  photo-edit__control--hidden">
+              <div class="photo-edit__scale"></div>
+              <div class="photo-edit__toggle"></div>
             </div>
+            <div class="photo-edit__line"></div>
           </div>
           <div class="btn-wrapper">
             <a class="btn-default post-btn" href="#">Запостить</a>
@@ -238,10 +244,12 @@
     </div>
     <footer class="page-footer">
       <div class="image-logo">
-        <picture>
-          <source media="(min-width: 1200px)" srcset="img/logo-pink-blue-desktop.svg">
-          <img src="img/logo-pink-blue-mobile.svg">
-        </picture>
+        <a href="#">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-pink-blue-desktop.svg">
+            <img src="img/logo-pink-blue-mobile.svg">
+          </picture>
+        </a>
       </div>
       <div class="social">
         <a class="social__item  social__item--twitter" href="#">Twitter</a>
@@ -251,7 +259,9 @@
       <div class="page-footer__copyright">
         <span class="page-footer__developed">Разработано</span>
         <a class="html-academy-logo" href="#">
-          <img src="img/logo-htmlacademy.svg" alt="html-academy-logo">
+          <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+          <path fill="#d22856" d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787 l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65 l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036 v10.02L13.472,31.85L1.925,24.979V15.127z"/>
+          </svg>
         </a>
       </div>
     </footer>
