--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     <script>
     // Picture element HTML5 shiv
     document.createElement( "picture" );
@@ -30,12 +30,12 @@
           <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
           <li class="main-nav__item"><a class="main-nav__link" href="photo.html">Фотографии</a></li>
           <li class="main-nav__item "><a class="main-nav__link main-nav__link--active" >Конкурс</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="#">Html&nbsp;Academy</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="#">HTML&nbsp;Academy</a></li>
         </ul>
       </nav>
     </header>
     <div class="page-title">
-      <h2 class="page-title__text">Конкурс на самое безбашеное путешествие с Пинк</h2>
+      <h2 class="page-title__text">Конкурс на самое безбашенное путешествие с Пинк</h2>
     </div>
     <div class="page-descr">
       <p class="page-descr__text">Поделитесь своей историей и получите шанс выиграть ценный приз &mdash; 1000 миль на вашу бонусную карту! <span class="page-descr__additional-text">Пожалуйста, заполните форму ниже:</span></p>
@@ -130,7 +130,7 @@
           </div>
           <fieldset class="contest-form__emotions">
             <legend class="contest-form__title">Опишите свои эмоции</legend>
-            <textarea class="contest-form__textarea" rows="5" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+            <textarea class="contest-form__textarea" rows="3" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </fieldset>
           <div class="contest-form__submit-area">
             <button class="form-btn form-btn--in-progress" type="submit" value="submit">Отправить форму</button>
