--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li class="main-nav__item"><a class="main-nav__link">Главная</a></li>
           <li class="main-nav__item"><a class="main-nav__link" href="photo.html">Фотографии</a></li>
           <li class="main-nav__item"><a class="main-nav__link" href="form.html">Конкурс</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="#">Html&nbsp;Academy</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="#">HTML&nbsp;Academy</a></li>
         </ul>
       </nav>
     </header>
