--- a/photo.html
+++ b/photo.html
@@ -1,111 +1,199 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+    </script>
+    <script src="js/picturefill.js" async></script>
   </head>
   <body class="body">
     <header class="main-header">
-     <nav class="main-nav">
-        <div class="main-nav__wrapper">
-          <div class="main-nav__short-menu  main-nav__short-menu--closed">
+      <nav class="main-nav">
+        <ul class="main-nav__list">
+          <li class="main-nav__item  main-nav__item-menu">
             <div class="logo">
-              <img src="img/logo-pink-white-mobile.svg" alt="pink-logo" width="75" height="23">
+              <a href="index.html">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
+                  <source media="(min-width: 700px)" srcset="img/logo-pink-white-tablet.svg">
+                  <img src="img/logo-pink-white-mobile.svg">
+                </picture>
+              </a>
             </div>
-            <a class="main-nav__toggle" href="#">Меню</a>
-          </div>
-          <ul class="main-nav__list">
-            <li class="main-nav__item"><a class="main-nav__link" href="#">Главная</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="#">Фотографии</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="#">Конкурс</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="#">Html Academy</a></li>
-          </ul>
-        </div>
+            <a class="main-nav__toggle  main-nav__toggle--closed" href="#">Меню</a>
+          </li>
+          <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
+          <li class="main-nav__item"><a class="main-nav__link  main-nav__link--active" >Фотографии</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="form.html">Конкурс</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="#">HTML&nbsp;Academy</a></li>
+        </ul>
       </nav>
     </header>
     <div class="page-title">
       <h2 class="page-title__text">Фотографии пользователей</h2>
     </div>
     <div class="page-descr">
-      <p class="page-descr__text">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
+      <p class="page-descr__text">Взгляните на фотографии, которые выкладывают пользователи! <br> Видите, как не хватает ваших?</p>
     </div>
     <div class="panorama">
       <div class="panorama__img">
-        <img src="img/panorama-mobile@1x.jpg"  alt="img-1">
+        <picture>
+          <source media="(min-width: 1200px)"
+                  srcset="img/panorama-desktop@1x.jpg 1x,
+                          img/panorama-desktop@2x.jpg 2x">
+          <source media="(min-width: 700px)"
+                  srcset="img/panorama-tablet@1x.jpg 1x,
+                          img/panorama-tablet@2x.jpg 2x">
+          <img src="img/panorama-mobile@1x.jpg"
+               srcset="img/panorama-mobile@2x.jpg 2x"
+               alt="panorama">
+        </picture>
+        <div class="panorama__day">Панорама дня</div>
       </div>
       <div class="panorama__comment">
         <b class="panorama__name">Анна</b>
         <span class="panorama__time">(5 минут назад)</span>
-        <p class="panorama__message">Прыгать или нет? Напишите в комментарии свой ответ и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+        <p class="panorama__message">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+        <div class="panorama__like-img"></div>
         <span class="panorama__like">Нравится: 215</span>
       </div>
     </div>
     <div class="photos">
       <div class="photo-block">
         <div class="photo-block__img">
-          <img src="img/photo-1-mobile@1x.jpg" alt="img-2">
+          <picture>
+            <source media="(min-width: 1200px)"
+                    srcset="img/photo-1-desktop@1x.jpg 1x,
+                            img/photo-1-desktop@2x.jpg 2x">
+            <source media="(min-width: 700px)"
+                    srcset="img/photo-1-tablet@1x.jpg 1x,
+                            img/photo-1-tablet@2x.jpg 2x">
+            <img src="img/photo-1-mobile@1x.jpg"
+                 srcset="img/photo-1-mobile@2x.jpg 2x"
+                 alt="img-1">
+          </picture>
         </div>
         <div class="photo-block__comment">
           <b class="photo-block__name">Левон</b>
           <span class="photo-block__time">(5 часов назад)</span>
           <p class="photo-block__message">Вчера он на луну летал, сегодня в руки к нам попал</p>
+          <div class="photo-block__like-img"></div>
           <span class="photo-block__like">Нравится: 356</span>
         </div>
       </div>
       <div class="photo-block">
         <div class="photo-block__img">
-          <img src="img/photo-2-mobile@1x.jpg" alt="img-3">
+          <picture>
+            <source media="(min-width: 1200px)"
+                    srcset="img/photo-2-desktop@1x.jpg 1x,
+                            img/photo-2-desktop@2x.jpg 2x">
+            <source media="(min-width: 700px)"
+                    srcset="img/photo-2-tablet@1x.jpg 1x,
+                            img/photo-2-tablet@2x.jpg 2x">
+            <img src="img/photo-2-mobile@1x.jpg"
+                 srcset="img/photo-2-mobile@2x.jpg 2x"
+                 alt="img-2">
+          </picture>
         </div>
         <div class="photo-block__comment">
           <b class="photo-block__name">Антон</b>
           <span class="photo-block__time">(12 часов назад)</span>
           <p class="photo-block__message">Соседи будут рады!</p>
+          <div class="photo-block__like-img"></div>
           <span class="photo-block__like">Нравится: 666</span>
         </div>
       </div>
       <div class="photo-block">
         <div class="photo-block__img">
-          <img src="img/photo-3-mobile@1x.jpg" alt="img-4">
+          <picture>
+            <source media="(min-width: 1200px)"
+                    srcset="img/photo-3-desktop@1x.jpg 1x,
+                            img/photo-3-desktop@2x.jpg 2x">
+            <source media="(min-width: 700px)"
+                    srcset="img/photo-3-tablet@1x.jpg 1x,
+                            img/photo-3-tablet@2x.jpg 2x">
+            <img src="img/photo-3-mobile@1x.jpg"
+                 srcset="img/photo-3-mobile@2x.jpg 2x"
+                 alt="img-3">
+          </picture>
         </div>
         <div class="photo-block__comment">
           <b class="photo-block__name">Борис</b>
           <span class="photo-block__time">(20 часов назад)</span>
           <p class="photo-block__message">Здесь могла быть ваша цитата о высоком и вечном</p>
+          <div class="photo-block__like-img"></div>
           <span class="photo-block__like">Нравится: 215</span>
         </div>
       </div>
       <div class="photo-block">
         <div class="photo-block__img">
-          <img src="img/photo-4-mobile@1x.jpg" alt="img-5">
+          <picture>
+            <source media="(min-width: 1200px)"
+                    srcset="img/photo-4-desktop@1x.jpg 1x,
+                            img/photo-4-desktop@2x.jpg 2x">
+            <source media="(min-width: 700px)"
+                    srcset="img/photo-4-tablet@1x.jpg 1x,
+                            img/photo-4-tablet@2x.jpg 2x">
+            <img src="img/photo-4-mobile@1x.jpg"
+                 srcset="img/photo-4-mobile@2x.jpg 2x"
+                 alt="img-4">
+          </picture>
         </div>
         <div class="photo-block__comment">
           <b class="photo-block__name">Сергей</b>
           <span class="photo-block__time">(25 часов назад)</span>
           <p class="photo-block__message">Самая кубанская в мире!</p>
+          <div class="photo-block__like-img"></div>
           <span class="photo-block__like">Нравится: 4</span>
         </div>
       </div>
       <div class="photo-block">
         <div class="photo-block__img">
-          <img src="img/photo-5-mobile@1x.jpg" alt="img-6">
+          <picture>
+            <source media="(min-width: 1200px)"
+                    srcset="img/photo-5-desktop@1x.jpg 1x,
+                            img/photo-5-desktop@2x.jpg 2x">
+            <source media="(min-width: 700px)"
+                    srcset="img/photo-5-tablet@1x.jpg 1x,
+                            img/photo-5-tablet@2x.jpg 2x">
+            <img src="img/photo-5-mobile@1x.jpg"
+                 srcset="img/photo-5-mobile@2x.jpg 2x"
+                 alt="img-5">
+          </picture>
         </div>
         <div class="photo-block__comment">
           <b class="photo-block__name">Максим</b>
           <span class="photo-block__time">(40 часов назад)</span>
           <p class="photo-block__message">Где снег-то?</p>
+          <div class="photo-block__like-img"></div>
           <span class="photo-block__like">Нравится: 150</span>
         </div>
       </div>
       <div class="photo-block">
         <div class="photo-block__img">
-          <img src="img/photo-6-mobile@1x.jpg" alt="img-7">
+          <picture>
+            <source media="(min-width: 1200px)"
+                    srcset="img/photo-6-desktop@1x.jpg 1x,
+                            img/photo-6-desktop@2x.jpg 2x">
+            <source media="(min-width: 700px)"
+                    srcset="img/photo-6-tablet@1x.jpg 1x,
+                            img/photo-6-tablet@2x.jpg 2x">
+            <img src="img/photo-6-mobile@1x.jpg"
+                 srcset="img/photo-6-mobile@2x.jpg 2x"
+                 alt="img-6">
+          </picture>
         </div>
         <div class="photo-block__comment">
           <b class="photo-block__name">Надежда</b>
           <span class="photo-block__time">(45 часов назад)</span>
           <p class="photo-block__message">Всем GM и взаимные лайки!</p>
+          <div class="photo-block__like-img"></div>
           <span class="photo-block__like">Нравится: 2560</span>
         </div>
       </div>
@@ -114,14 +202,38 @@
     <div class="photo-edit">
       <div class="photo-edit__wrapper">
         <div class="photo-edit__img">
-          <img src="img/photo-7-mobile@1x.jpg" alt="picture">
+          <picture>
+            <source media="(min-width: 1200px)"
+                    srcset="img/photo-7-desktop@1x.jpg 1x,
+                            img/photo-7-desktop@2x.jpg 2x">
+            <source media="(min-width: 700px)"
+                    srcset="img/photo-7-tablet@1x.jpg 1x,
+                            img/photo-7-tablet@2x.jpg 2x">
+            <img src="img/photo-7-mobile@1x.jpg"
+                 srcset="img/photo-7-mobile@2x.jpg 2x"
+                 alt="img-7">
+          </picture>
         </div>
         <div class="photo-edit__controls-wrapper">
           <div class="photo-edit__tools">
-            <div class="photo-edit__tool1">1</div>
-            <div class="photo-edit__tool2">2</div>
-            <div class="photo-edit__tool3">3</div>
-            <div class="photo-edit__control"></div>
+            <div class="photo-edit__crop"></div>
+            <div class="photo-edit__control">
+              <div class="photo-edit__scale"></div>
+              <div class="photo-edit__toggle"></div>
+            </div>
+            <div class="photo-edit__line"></div>
+            <div class="photo-edit__fill"></div>
+            <div class="photo-edit__control  photo-edit__control--hidden">
+              <div class="photo-edit__scale"></div>
+              <div class="photo-edit__toggle"></div>
+            </div>
+            <div class="photo-edit__line"></div>
+            <div class="photo-edit__contrast"></div>
+            <div class="photo-edit__control  photo-edit__control--hidden">
+              <div class="photo-edit__scale"></div>
+              <div class="photo-edit__toggle"></div>
+            </div>
+            <div class="photo-edit__line"></div>
           </div>
           <div class="btn-wrapper">
             <a class="btn-default post-btn" href="#">Запостить</a>
@@ -132,19 +244,27 @@
     </div>
     <footer class="page-footer">
       <div class="image-logo">
-        <img src="img/logo-pink-blue-mobile.svg" alt="pink-logo">
+        <a href="#">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-pink-blue-desktop.svg">
+            <img src="img/logo-pink-blue-mobile.svg">
+          </picture>
+        </a>
       </div>
       <div class="social">
-        <a class="social__item" href="#">Twitter</a>
-        <a class="social__item" href="#">Facebook</a>
-        <a class="social__item" href="#">Video</a>
+        <a class="social__item  social__item--twitter" href="#">Twitter</a>
+        <a class="social__item  social__item--facebook" href="#">Facebook</a>
+        <a class="social__item  social__item--youtube" href="#">Video</a>
       </div>
       <div class="page-footer__copyright">
         <span class="page-footer__developed">Разработано</span>
         <a class="html-academy-logo" href="#">
-          <img src="img/logo-htmlacademy.svg" alt="html-academy-logo">
+          <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+          <path fill="#d22856" d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787 l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65 l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036 v10.02L13.472,31.85L1.925,24.979V15.127z"/>
+          </svg>
         </a>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
